# stock-analysis

./: .bash_history  .gitignore  PSR-list.ipynb  Pyfolio-test.ipynb  README.md  anomary.ipynb  bt-quick-start.ipynb  pyproject.toml
.cache/matplotlib/: fontlist-v310.json  fontlist-v330.json
.ipynb_checkpoints/: Pyfolio-test-checkpoint.ipynb  Zipline-Trader-checkpoint.ipynb
.ipython/profile_default/: history.sqlite
.jupyter/: migrated
.zipline/: extension.py
QuantitativeFinance/: .bash_history  2-introduction_to_backtesting.ipynb  README.md  Tutorial.ipynb  Untitled.ipynb  buy_and_hold.pkl  downloading_stock_prices.ipynb
QuantitativeFinance/.ipynb_checkpoints/: 2-introduction_to_backtesting-checkpoint.ipynb  Tutorial-checkpoint.ipynb  downloading_stock_prices-checkpoint.ipynb  earnings_calendar-checkpoint.ipynb
QuantitativeFinance/.jupyter/: migrated
QuantitativeFinance/daily/: aapl.csv
bt/: README.md  Strategy_Combination.ipynb
cache/: SQ_earnings.pkl  SQ_financial.pkl  df_growth1.pkl  df_growth1_eps.pkl  nas1000_eps.pkl
data/: df_eauto.pkl  df_fangam.pkl  df_growth2_fin.pkl  nas1000_eps.pkl  nas100_eps.pkl  nas200_eps.pkl  nas400_eps.pkl  nas600_eps.pkl  ns0.pkl  ns50.pkl
fastquant/: README.md
yahoo_fin/: EPS-analysis.ipynb  EPS-analysis.py  LINKS.md  MEMO.md  PSR-analysis.ipynb  PSR-analysis.py  PSR-list.ipynb  Pyfolio.ipynb  Pyfolio.py  README.md  Revenue-analysis.ipynb  TODO.md  Tutorial.ipynb  Tutorial.py  Yields.ipynb  financials.html  financials_tohtml.html  mystock_info.py  requirement.py  stock-drawdown.ipynb  stock_analysis.py  table.css
(+165 files in other folders)
