[tool.poetry]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = ["jnishii <nishii@yamaguchi-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "1.4.2"

[tool.poetry.dev-dependencies]
yahoo-fin = "^0.8.9"
seaborn = "^0.11.2"
importlib = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
